# english-tutor

./: .gitignore  README.md
.specify/memory/: constitution.md
backend/: Dockerfile  Makefile  fly.toml  main.py  pyproject.toml  questions.csv  run_bot.py  tasks.csv
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  3736ec7cb247_enable_rls_on_all_tables.py  4264bdd4b214_remove_duplicate_progress_index.py  4c12f35b3efd_add_assessment_questions_table.py  4d38fbf3441a_enable_rls_on_alembic_version.py  9b1041eacda2_remove_permissive_write_policies.py  e5d041fe841a_remove_difficulty_column.py  fcd9b6778419_add_rls_policies_for_all_tables.py
backend/docs/: SHEETS_FORMAT.md
backend/scripts/: create_sheets_template.py  setup_bot_menu.py  setup_google_terraform.py
backend/src/: config.py
backend/src/english_tutor/: __init__.py  config.py
backend/src/english_tutor/api/: app.py  bot.py  dependencies.py  sync.py
backend/src/english_tutor/api/bot/: __init__.py
backend/src/english_tutor/api/bot/handlers/: assessment.py  start.py  tasks.py
backend/src/english_tutor/api/content/: __init__.py  questions.py  questions_by_id.py  tasks.py
backend/src/english_tutor/models/: __init__.py  assessment.py  assessment_question.py  base.py  progress.py  question.py  task.py  user.py
backend/src/english_tutor/services/: assessment.py  content_sync.py  google_drive.py  google_sheets.py  scheduler.py  task_completion.py  task_delivery.py
backend/src/english_tutor/utils/: exceptions.py  logger.py
backend/terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
backend/tests/: conftest.py
backend/tests/contract/: test_content_api.py
backend/tests/integration/: test_assessment_flow.py  test_content_management_flow.py  test_task_delivery_flow.py
backend/tests/unit/: test_bot_handlers_assessment.py  test_models_assessment.py  test_models_progress.py  test_models_question.py  test_models_task.py  test_models_user.py  test_run_bot.py  test_services_assessment.py  test_services_task_delivery.py
docs/: GOOGLE_SHEETS_SETUP.md
specs/001-english-tutor-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-english-tutor-bot/checklists/: requirements.md
specs/001-english-tutor-bot/contracts/: openapi.yaml
